Grandes ajustes nos resources, controllers e models, correção importante na importação da taco
