# app/Http/Controllers/FoodController.php
@@ -3,10 +3,12 @@
 namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
-
 use App\Http\Requests\ApiRequest;
 
+use LaravelLegends\EloquentFilter\Filter;
+
 use App\Models\Food;
+use App\Http\Resources\FoodResource;
 
 class FoodController extends Controller
 {
@@ -19,12 +21,12 @@ class FoodController extends Controller
      * @OA\Get(
      *      path="/api/food",
      *      operationId="getFoodList",
-     *      tags={"Foods"},
+     *      tags={"Food"},
      *      summary="Get list of foods",
      *      description="Returns list of foods",
      *      @OA\Parameter(
      *          name="api_token",
-     *          description="Api Token",
+     *          description="API Token",
      *          required=true,
      *          in="query",
      *          @OA\Schema(
@@ -60,10 +62,54 @@ class FoodController extends Controller
      */
     public function index (ApiRequest $request) {
 
-        $foods = Food::get();
+        $foods = FoodResource::collection(Food::get());
 
         return response()->json($foods, 200);
     }
 
+    /**
+     * Display the specified resource.
+     *
+     * @param  \App\Models\Food  $food
+     * @return \Illuminate\Http\Response
+     */
+    /**
+     * @OA\Get(
+     *      path="/api/food/{id}",
+     *      operationId="getFoodById",
+     *      tags={"Food"},
+     *      summary="Get a food by id",
+     *      description="Returns one food",
+     *      @OA\Parameter(
+     *          name="api_token",
+     *          description="API Token",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Food id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       )
+     *     )
+     */
+    
+    public function show(ApiRequest $request, Food $food) {
 
+        $return = new FoodResource($food->load('category', 'ag', 'aminoacid', 'cmvcol'));
+
+        return response()->json($return, 200);
+    }
 }
