# routes/api.php
@@ -4,6 +4,11 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\FoodController;
+use App\Http\Controllers\CategoryController;
+use App\Http\Controllers\ActivityLevelController;
+use App\Http\Controllers\AGController;
+use App\Http\Controllers\CMVColController;
+use App\Http\Controllers\AminoacidController;
 
 /*
 |--------------------------------------------------------------------------
@@ -24,6 +29,18 @@ Route::group(['middleware' => ['auth:api']], function() {
 
     Route::apiResource('/food', FoodController::class)->except(['destroy']);
 
+    Route::apiResource('/category', CategoryController::class)->except(['destroy']);
 
+    Route::prefix('category')->group(function () {
+        Route::get('/{category}/food', [CategoryController::class, 'categoryFoods'])->name('category_foods');
+    });
+
+    Route::apiResource('/activitylevel', ActivityLevelController::class)->except(['destroy']);
+
+    Route::apiResource('/ag', AGController::class)->except(['destroy']);
+
+    Route::apiResource('/cmvcol', CMVColController::class)->except(['destroy']);
+
+    Route::apiResource('/aminoacid', AminoacidController::class)->except(['destroy']);
 });
 
